[metadata]
name = sjtu_drone_control
version = 0.0.0
description = sjtu_drone_control package
maintainer = j
maintainer_email = your@email.com
license = TODO

[options]
packages = find:
install_requires =
    setuptools
zip_safe = true

[options.entry_points]
console_scripts =
    dummy_node = sjtu_drone_control.dummy_node:main
